--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "dev": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "@anthropic-ai/sdk": "^0.20.1",
+    "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "axios": "^1.6.2",
-    "@anthropic-ai/sdk": "^0.20.1"
+    "express": "^4.18.2",
+    "puppeteer": "^24.17.0"
   },
   "engines": {
     "node": ">=18.0.0"
